# op-succinct

./: Cargo.toml  book.toml  justfile
.github/workflows/: book.yml  e2e-sysgo-tests.yml  sqlx-check.yml
book/: SUMMARY.md
book/fault_proofs/data-availability/: celestia.md  eigenda.md  intro.md
book/fault_proofs/experimental/: experimental.md
book/validity/: proposer.md
book/validity/contracts/: update-parameters.md
book/validity/data-availability/: celestia.md  eigenda.md  intro.md
book/validity/experimental/: altda.md  experimental.md
contracts/src/fp/: OPSuccinctFaultDisputeGame.sol
elf/: aggregation-elf
fault-proof/: Cargo.toml  Dockerfile.challenger  Dockerfile.proposer  Dockerfile.proposer.altda  Dockerfile.proposer.celestia  Dockerfile.proposer.eigenda
fault-proof/src/: config.rs  prometheus.rs  proposer.rs
fault-proof/tests/common/: env.rs
scripts/prove/: Cargo.toml
scripts/prove/tests/: exploit_regression.rs
scripts/utils/: Cargo.toml
utils/altda/host/src/: host.rs
utils/celestia/host/src/: host.rs
utils/client/src/witness/: executor.rs
utils/eigenda/host/src/: host.rs
utils/ethereum/host/src/: host.rs
utils/host/src/: block_range.rs  host.rs
validity/: Dockerfile.altda
validity/src/: prom.rs  proposer.rs
