[package]
name = "op-succinct-prove"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "multi"
path = "bin/multi.rs"

[[bin]]
name = "agg"
path = "bin/agg.rs"

[dependencies]

# workspace
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
dotenv.workspace = true
csv.workspace = true
tracing.workspace = true
cfg-if.workspace = true
serde_json.workspace = true

# local
op-succinct-host-utils.workspace = true
op-succinct-client-utils.workspace = true
op-succinct-proof-utils.workspace = true
op-succinct-scripts = { path = "../utils" }
op-succinct-elfs.workspace = true
op-succinct-fp.workspace = true

# alloy
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-node-bindings.workspace = true
alloy-primitives.workspace = true
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-signer-local.workspace = true
alloy-sol-types.workspace = true
alloy-transport-http = { workspace = true, features = [
    "reqwest",
    "reqwest-native-tls",
] }

# sp1
sp1-sdk.workspace = true
sp1-cluster-utils.workspace = true

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
rustls = { version = "0.23", features = ["ring"] }
# Test-only: needed by tests/exploit_regression.rs to construct the
# `L1_HEAD_KEY` and `L2_CLAIM_BLOCK_NUMBER_KEY` local preimage keys for the
# GHSA-5jh4-3p33-85xc witness mutation. Dev-dep only — does not link into any
# range/agg ELF.
kona-preimage.workspace = true
# Test-only: tests/exploit_regression.rs redirects the host stderr to a
# tempfile during the SP1 simulator run so it can verify the guest panic is
# from the postcondition (not InvalidPreimageKey or any other unrelated
# pipeline error). Unix-only crate; matches the OS targets we test on.
gag = "1.0"
tempfile.workspace = true

[build-dependencies]
op-succinct-build-utils.workspace = true

[features]
default = ["ethereum"]
celestia = ["op-succinct-proof-utils/celestia"]
eigenda = ["op-succinct-proof-utils/eigenda"]
ethereum = ["op-succinct-proof-utils/ethereum"]
